Added InterpolatingTable1D, cleaned up interface, and updated documentation.